# sudoku

./: LICENSE  README.md  pyproject.toml  requirements.txt  sudoku.py  sudoku2.py
.github/workflows/: CI.yml
other_versions/: sudoku.py
src/sudoku-utils/: __init__.py  sudoku.py
src/sudoku_utils/: clean_sudoku.py
src/sudokutoolbox/: __init__.py  __main__.py  constraint.py  sudoku.py  util.py
tests/: test_constraints.py  test_sudoku.py
