[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-utils"
version = "0.0.1"
authors = [
  { name="Izaak Beekman", email="zbeekman@gmail.com" },
]
description = "Sudoku solver and generator utilities"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
      packages = ["src/sudoku-utils"]

[project.urls]
Homepage = "https://github.com/zbeekman/sudoku"
Issues = "https://github.com/zbeekman/sudoku/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
